src/components/MatchHistory/MatchHistoryLarge/MatchHistoryLarge.css
.matchHistory-large {
  display: grid;
  grid-template-columns: 1fr 1fr .6fr .8fr 1fr;
}

.row-1, .row-2 {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.row-2 {
  font-size: 18px;
  font-weight: 700;
}

.row-3 {
  display: flex;
  justify-content: center;
}


/* ========= COL 2 =========*/
.col-2 {
  display: flex;
  align-items: center;
  gap: 5px;
}

.champion, .champion > img {
  width: 48px;
  height: 48px;
  position: relative;
}

.level {
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: #191937;
  width: 16px;
  height: 16px;
  text-align: center;
  border-radius: 3px;
  font-size: 11px
}

.summoner-spell, .runes {
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.summoner-spell > img, .runes > img  {
  width: 22px;
  height: 22px;
  border-radius: 3px;
}

/* ========= COL 3 =========*/
.col-3 {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.deaths {
  color: rgb(219, 67, 67);
}


/* ========= COL 4 ========= */
.col-4 {
  display: flex;
  align-items: center;
}

.items {
  display: flex;
  gap: 4px;
}

.main-items {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(2, 1fr);
  gap: 4px;
}

/* ========= COL 5 ========= */
.col-5 {
  display: flex;
  justify-content: space-between;
  font-size: 10px;
}

.teamlist {
  display: flex;
  flex-direction: column;
  gap: 3px;
}

.summoner {
  display: flex;
  gap: 5px;
}

.summoner > img {
  width: 14px;
  height: 14px;
}

